2008-11-02  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs: Use gperl_register_fundamental_alias to register the
	"Glib::Uint" backwards-compatibility alias.

2008-11-02  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GBoxed.xs
	* GObject.xs
	* GType.xs
	* Glib.exports
	* gperl.h: Provide gperl_register_boxed_alias,
	gperl_register_fundamental_alias, and gperl_register_object_alias
	to register aliases for other registered types.  An alias is a
	package name that will resolve to the specified type, while the
	type will still resolve to its originally registered package when
	going the other way.

2008-11-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/9.t
	* GMainLoop.xs: Wrap g_child_watch_add as Glib::Child::watch_add.
	Patch by Kevin Ryde.

2008-11-01  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GMainLoop.xs
	* Glib.pm: Add constants Glib::SOURCE_CONTINUE and SOURCE_REMOVE
	for use in source-type callbacks.  Patch by Kevin Ryde.

2008-10-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: ExtUtils::MakeMaker 6.46 removed support for
	EXTRA_META in favor of the new META_MERGE and META_ADD.  Adapt.

2008-09-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* Makefile.PL
	* NEWS
	* README: Stable release 1.200.

2008-09-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* TODO: Remove the entry about hushing about documentation
	generation.  That's done.

2008-09-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.193.

2008-09-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GClosure.xs (gperl_callback_invoke): Instead of putting a mortal
	copy of the user data on the stack, increment its ref count and
	mortalize it.  This ensure that modifications to $_[-1] in the
	callback actually change the user data.  Patch by Kevin Ryde.

	* MANIFEST
	* GObject.xs
	* t/lazy-loader.t: Make sure the lazy loader can handle being
	invoked on packages which aren't registered with the Glib type