@@ -64,6 +64,7 @@ gperl_object_stash_from_type
 gperl_object_type_from_package
 gperl_package_from_type
 gperl_param_spec_package_from_type
+gperl_param_spec_type_from_package
 gperl_prepend_isa
 gperl_register_boxed
 gperl_register_boxed_alias
@@ -72,6 +73,7 @@ gperl_register_fundamental
 gperl_register_fundamental_alias
 gperl_register_object
 gperl_register_object_alias
+gperl_register_param_spec
 gperl_register_sink_func
 gperl_remove_exception_handler
 gperl_run_exception_handlers
